--- a/src/components/app.css
+++ b/src/components/app.css
@@ -20,25 +20,28 @@
 /*   -webkit-text-size-adjust: 100%; */
 /* } */
 
+:root {
+    font-size: 14px;
+}
 
   /* Hide the default scrollbar */
-  ::-webkit-scrollbar {
-    width: 6px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    /* background: #f1f1f1; */
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #4444;
-    border-radius: 3px;
-  }
-
+  /* ::-webkit-scrollbar { */
+  /*   width: 6px; */
+  /* } */
+  /**/
+  /* /* Track */ */
+  /* ::-webkit-scrollbar-track { */
+  /*   /* background: #f1f1f1; */ */
+  /* } */
+  /**/
+  /* /* Handle */ */
+  /* ::-webkit-scrollbar-thumb { */
+  /*   background: #4444; */
+  /*   border-radius: 3px; */
+  /* } */
+  /**/
   /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #444444;
-
-  }
+  /* ::-webkit-scrollbar-thumb:hover { */
+  /*   background: #444444; */
+  /**/
+  /* } */
